--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.scrolling{
+  max-height: 1200px;
+  overflow: auto;
+}
+
+.overlapping-div {
+  position: absolute;
+  z-index: 100;
+  text-align: lerf;
+}
