--- a/src/Components/item/item.scss
+++ b/src/Components/item/item.scss
@@ -1,65 +1,33 @@
-// Import Bootstrap SCSS
-@import '~bootstrap/scss/bootstrap';
 
-// Custom styles
-.item-card {
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-    background-color: #62ce88;// Background color
+.card {
+    margin-bottom: 20px; 
+    border: 1px solid #dee2e6; 
+    border-radius: 10px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    background-color: #6dd7b9; 
+}
 
 .card-title {
-font-size: 1.2rem;
-font-weight: bold;
-margin-bottom: 10px;
+font-weight: bold; 
+font-size: 1.2rem; 
+margin-bottom: 10px; 
 }
 
 .card-text {
 font-size: 1rem;
-margin-bottom: 5px;
+margin-bottom: 8px; 
 }
 
-.fw-bold {
-font-weight: bold;
-}
-
-.card-button-group {
-display: flex;
-justify-content: space-between;
-margin-top: 20px;
-}
-
-.card-button {
-padding: 8px 20px;
-font-size: 1rem;
-border-radius: 5px;
-cursor: pointer;
+.btn-info {
+margin-right: 10px; 
+background-color: #007bff; 
+border-color: #007bff; 
+color: #fff;
+font-weight: bold; 
+transition: background-color 0.3s, border-color 0.3s, color 0.3s; 
 
 &:hover {
-    opacity: 0.8;
-}
-
-&.edit {
-    background-color: #007bff;
-    border-color: #007bff;
-    color: #fff;
-
-&:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
-    }
-}
-
-&.delete {
-    background-color: #dc3545;
-    border-color: #dc3545;
-    color: #fff;
-
-    &:hover {
-    background-color: #bd2130;
-    border-color: #bd2130;
-    }
-}
+    background-color: #0056b3; 
+    border-color: #0056b3; 
 }
 }
